# solana-assignment

./: Cargo.toml
src/: lib.rs  main.rs
src/models/: request.rs  response.rs
src/routes/: keypair.rs  message.rs  mod.rs  send.rs  token.rs
