[package]
name = "solana-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bs58 = "0.5.1"
ed25519-dalek = "2.1.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "2.3.2"
solana-sdk = "2.3.1"
spl-token = "8.0.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
